# dava

./: .gitignore  AGENTS.md  README.md  avatar_generator.py  avatar_updater.py  common.py  config.py  logs.py  main.py  pyproject.toml  weather_codes.py  weather_descriptor.py
dava/: __init__.py  auth.py  avatar_generator.py  avatar_updater.py  backend.py  bot_controller.py  common.py  config.py  db.py  holidays.py  logs.py  raw_handlers.py  service.py  transport.py  tuican_app.py  user_store.py  weather_codes.py  weather_descriptor.py
dava/generators/: __init__.py  hermes_auth.py  hermes_image_generator.py  hermes_video_generator.py  image_generator.py  nano_banana_avatar_generator.py  nano_banana_generator.py  polza_base.py  stable_diffusion_generator.py  veo_generator.py  video_generator.py  xai_auth.py
dava/screens/: __init__.py  action_add_screen.py  action_editor_screen.py  action_paginator_screen.py  action_screen.py  admin_globals_screen.py  base.py  category_screen.py  edit_screen.py  main_screen.py  schedule_screen.py  settings_screen.py  simple_screens.py  users_screen.py  video_actions_main_screen.py  view_full_screen.py
scripts/: init_xai_auth.py  run_migrations.py
scripts/migrations/: 001_initial_schema.py  002_seed_video_defaults.py  003_migrate_env_vars.py  003_seed_app_defaults.py  (+2 more)
systemd/: dava  dava.service  dava.timer
tests/: conftest.py  test_avatar_updater.py  test_common.py  test_config.py  test_db.py  test_errors.py  test_generators.py  test_holidays.py  test_logs.py  test_migrations.py  test_weather_descriptor.py
