[project]
name = "dynamicavatar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "apscheduler>=3.11.0",
    "grequests>=0.7.0",
    "pillow>=11.3.0",
    "pysocks>=1.7.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "telethon>=1.40.0",
    "tuican[telethon] @ git+https://github.com/G0-G4/TUIcan.git@8143f5a",
    "workalendar>=17.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aioresponses>=0.7.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
